[package]
name = "test_rust_tty_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
telegram-bot = "0.8.0"
futures = "0.3.17"
hyper = "0.10.8"
hyper-rustls = "0.22.1"
serde_json = "0.9.10"
serde = "0.9.14"
serde_derive = "0.9.14"